[package]
name = "honeytree-calc"
version = "1.0.1"
edition = "2021"
description = "DPPt Munchlax Honey Tree Calculator"
readme = "README.md"
repository = "https://github.com/LavenderG/honeytree-calc"
license = "GPL-3.0"
keywords = ["videogame", "calculator", "honey", "munchlax", "pokemon"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
