[package]
name = "honeytree-calc"
version = "2.0.0"
edition = "2021"
description = "DPPt Munchlax Honey Tree Calculator"
readme = "README.md"
repository = "https://github.com/LavenderG/honeytree-calc"
license = "GPL-3.0-only"
keywords = ["videogame", "calculator", "honey", "munchlax", "pokemon"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
